[package]
name = "seal-rs"
version = "0.1.0"
authors = ["Bruno Grieder <bruno.grieder@cosmian.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
anyhow = { package = "eyre", version = "0.6" }

[dev-dependencies]
rand = "0.8"
tracing = "0.1"

[build-dependencies]
cmake = "0.1.48"
bindgen = "0.59"
